# saland

./: .gitignore  CMakeLists.txt  README.md  packdata.sh  travis_build.script
.github/workflows/: main.yml
data/characters/player1/: player.saland.json
data/maps/: city_0x-2.tmx  city_outside.tsx  desert.tmx  prefabs01.tmx  sample1.tmx  sample_dungeon.tmx  template_forrest.tmx  template_forrest2.tmx  template_start.tmx  terrain.tsx
data/monsters/: monsters.json
data/saland/hair/: hair.json
data/saland/items/: armor.json  base_items.json  food_items.json
data/saland/spells/: base_spells.json  spell_food_items.json
data/sounds/: AUTH
data/sprites/: effects.sprite  fallback.sprite  female_shirts.sprite  food.sprite  hair.sprite  hair_blonde.sprite  hair_blonde_bg.sprite  hair_blue.sprite  hair_blue_bg.sprite  hair_brunette.sprite  hair_brunette_bg.sprite  hair_female.sprite  hair_raven.sprite  hair_raven_bg.sprite  hair_sara.sprite  hair_sara_bg.sprite  humans.sprite  items.sprite  kenny.sprite  long_knife.sprite  male_pants.sprite  male_pants_female.sprite  menu.sprite  monsters.sprite  pants2.sprite  std_hair.sprite  std_hair_female.sprite  std_hair_female_bg.sprite  terrain.sprite  weapons.sprite
data/textures/: AUTH  city_outside.png.txt  food.png.txt
data/textures/lpc_womens_shirts/: female_shirts.sprite  generate_sprite.py  readme.txt
data/textures/spritesheet/: README.md  credits.csv  generate_sprite.py
data/textures/spritesheets/: generate_sprite.py
data/textures/std_hair/: readme.txt
embedded_libs/PlatformFolders-4.1.0/: CMakeLists.txt
embedded_libs/box2d-2.4.1/: CMakeLists.txt
extra/: runAstyle.sh
extra/docker/: Dockerfile  Dockerfile.Ubuntu18.04build_Standalone  Dockerfile.WindowsBuild
extra/editor/: image_frame.py  image_viewer.py  spell_editor.py  texture_selector.py  texture_selector_ng.py  tree_frame.py
extra/scripts/: build_sprites.sh  food_items.csv
extra/scripts/python/: create_human_sprite.py  process_food_items.py
extra/scripts/python/common/: directional_sprite.py
extra/standalone/: README.txt  build_standalone.sh  compile_requirements.sh  saland_standalone_launcher
src/: ImGuiHairSelect.cpp  ImGuiHairSelect.hpp  ImGuiMainMenu.cpp  ImGuiMainMenu.hpp  ImGuiOptions.cpp  ImGuiOptions.hpp  ImGuiPlayerSelect.cpp  ImGuiPlayerSelect.hpp  ImGuiWorldSelect.cpp  ImGuiWorldSelect.hpp  MenuSystem.cpp  MenuSystem.h  SagoImGui.cpp  common.cpp  common.h  global.hpp  os.cpp  os.hpp  saland.cpp  version.h
src/Libs/: cdecode.c  cencode.c
src/Libs/imgui/backends/: imgui_impl_sdl2.cpp
src/Libs/include/rapidxml/: version-1.13.txt
src/editor/: SagoTextureSelector.cpp  SagoTextureSelector.hpp  editor_loader.cpp
src/help/: DialogBox.cpp  DialogBox.hpp  HelpAboutState.cpp  HelpAboutState.hpp  HelpCommon.cpp  HelpCommon.hpp  ReadKeyboard.cpp  ReadKeyboard.h  scopeHelpers.hpp
src/sago/: SagoDataHolder.cpp  SagoDataHolder.hpp  SagoLogicalResize.hpp  SagoMisc.cpp  SagoMisc.hpp  SagoSprite.cpp  SagoSprite.hpp  SagoSpriteHolder.hpp  SagoTextBox.cpp  SagoTextBox.hpp  SagoTextField.cpp  SagoTextField.hpp  platform_folders.cpp
src/sagotmx/: tmx_struct.h
src/saland/: Game.cpp  Game.hpp  GameConsoleCommand.cpp  GameConsoleCommand.hpp  GameDraw.cpp  GameDraw.hpp  GameHair.cpp  GameHair.hpp  GameInventoryState.cpp  GameInventoryState.hpp  GameItems.cpp  GameItems.hpp  GameMonsters.cpp  GameMonsters.hpp  GameRegion.cpp  GameRegion.hpp  GameShop.cpp  GameShop.hpp  GameSpellState.cpp  GameSpellState.hpp  GameUpdates.cpp  GameUpdates.hpp  Prefabs.cpp  Prefabs.hpp  globals.hpp
src/saland/console/: Console.cpp  Console.hpp
src/saland/model/: Player.cpp  Player.hpp  World.cpp  World.hpp  placeables.hpp  spells.cpp  spells.hpp
src/terrain/: WaterHandler.cpp  WaterHandler.hpp
